refactor: commands refactor part 1