@@ -46,10 +46,6 @@ dependencies {
 
     compileOnly("org.projectlombok:lombok:1.18.46")
     annotationProcessor("org.projectlombok:lombok:1.18.46")
-
-    testImplementation(platform("org.junit:junit-bom:5.13.4"))
-    testImplementation("org.junit.jupiter:junit-jupiter")
-    testRuntimeOnly("org.junit.platform:junit-platform-launcher")
 }
 
 tasks.withType<JavaCompile> {
@@ -62,11 +58,6 @@ tasks.withType<Javadoc> {
 }
 
 tasks.withType<JavaExec> {
-    jvmArgs = listOf("--enable-preview")
-}
-
-tasks.withType<Test> {
-    useJUnitPlatform()
     jvmArgs = listOf("--enable-preview")
 }
 
